--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -19,3 +19,14 @@ repos:
     rev: v19.1.7
     hooks:
     - id: clang-format
+
+  - repo: https://github.com/Lucas-C/pre-commit-hooks
+    rev: v1.5.5
+    hooks:
+      - id: insert-license
+        files: \.(cpp|hpp|h)$
+        args:
+          - --license-filepath
+          - license_header.txt
+          - --comment-style
+          - //
