--- a/.gitignore
+++ b/.gitignore
@@ -5,11 +5,13 @@ CMakeScripts
 Testing
 Makefile
 cmake_install.cmake
+__pycache__
 install_manifest.txt
 compile_commands.json
 CTestTestfile.cmake
 _deps
 CMakeUserPresets.json
+
 
 build*/
 .vscode/
